--- a/static/style.css
+++ b/static/style.css
@@ -1,28 +1,37 @@
 *{
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 html, body {
   margin: 0;
   padding: 0;
+  color: white;
+  text-shadow: 1px 1px rgba(54, 54, 54, .3),1px 1px rgba(54, 54, 54, .3),1px 1px rgba(54, 54, 54, .3),1px 1px rgba(54, 54, 54, .3);
 }
 body{
   background-image: url("./back.jpg");
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
   background-size: cover;
   background-position: center;
 }
 
-#experience_bar{
+#wrap-game-info{
+  z-index: 10;
+  position: fixed;
+  min-width: 300px;
+  right: 20px;
+  top: 20px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  height: 64px;
-  color: white;
+  font-size: 20px;
   background-color: rgba(54, 54, 54, .8);
-  font-size: 30px;
+  padding: 10px;
 }
-
+a:link, a:visited{
+  text-decoration: none;
+  color: rgb(200,200,200);
+}
 /* wraps all wrapper-boxes */
 #wrapper_out{
   display: flex;
@@ -46,20 +55,6 @@ body{
 .item{
   width: 100px;
   height: 100px;
-}
-
-footer{
-  position: fixed;
-  width:100%;
-  display: flex;
-  justify-content: center;
-  height: 17%;
-  color: rgba(255,255,255, .6);
-  background-color: rgba(54, 54, 54, .8);
-}
-
-.footer_title{
-  text-align: center;
 }
 
 .orange_mushroom{
@@ -200,4 +195,61 @@ footer{
   width: 240px;
   opacity: 0;
   /* animation: levelup 3s 1s ease forwards; */
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 100px;
+  color: rgba(255,255,255, .6);
+  background-color: rgba(54, 54, 54, .8);
+}
+
+#experience-bar{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  bottom:0;
+  width: 100%;
+  font-size: 12px;
+  border: 1px solid grey;
+}
+
+#wrap-exp{
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(180deg, rgba(169,210,35,1) 0%, rgba(236,236,236,1) 9%, rgba(169,210,35,1) 79%);
+  background-size: 0%;
+  background-position: left;
+  transition: background-size ease-out .5s;
+}
+
+#wrap-credit{
+  position: absolute;
+  top:0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  opacity: 0;
+}
+
+#credit{
+  position: relative;
+  top: -50px;
+  font-size: 30px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  padding: 30px;
+  background-color: rgba(54, 54, 54,.8);
 }
